<resources>
    <string name="app_name">Aicp Extras</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="first_layout_title">Placeholder for various shit\nand naked chicks!!!</string>
    <string name="second_layout_title">Second layout</string>
    <string name="third_layout_title">Third Layout</string>
    <string name="aicp_extras_title">AICP Extras</string>
    <string name="pun_title">One rom to rule them all</string>
    <string name="various_shit_title">Various shit</string>
    <string name="about_title">About</string>
    <string name="other_title">Other</string>
    <string name="g_community">G+ community</string>
    <string name="ui_title">UI</string>
    <string name="builtin_title">BUILT-IN</string>
    <string name="addons_title">ADDONS</string>
    <string name="welcome_title">WELCOME\nto the real world!!!</string>
    <string name="logo">logo</string>
    <string name="display_animations_title">Display and animations</string>
    <string name="headsup_title">Heads up notifications</string>
    <string name="notificaitons_title">Notification drawer</string>
    <string name="statubar_title">Status bar</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="aicp_downloads_title">Downloads</string>
    <string name="aicp_gerrit_title">Gerrit</string>
    <string name="send_mail_intent">Send mail...</string>
    <string name="nothing_title">Nothing to see here yet, move along</string>
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>
    <string name="storage_permission_granted">Permission Granted, Now you can write to storage.</string>
    <string name="storage_permission_not_granted">Permission Denied, You cannot write to storage.</string>
    <string name="recents_panel_title">Recents panel</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
    <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_title_summary">View recent changes in ROM</string>
    <string name="changelog_error">Unable to load changelog</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_enabled">Enabled</string>
    <string name="qs_brightness_slider_disabled">Disabled</string>
    <string name="lcd_density">LCD density</string>
    <string name="dialog_title_lcd_density">LCD density</string>
    <string name="lcd_density_value_format">%d DPI</string>
    <string name="lcd_density_default_value_format">%d DPI (default)</string>
    <string name="restarting_ui">Restarting UI\u2026</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="traffic_category">Traffic Indicators</string>
    <string name="traffic_title">Traffic</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="resetting_default">Color set to default</string>
    <string name="default_string">Default</string>
    <string name="su_indicator">Superuser indicator</string>
    <string name="su_indicator_summary_on">Superuser indicator is visible when a session is active</string>
    <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
    <string name="status_bar_custom_header_title">Time Contextual Header</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
    <string name="carrier_options">Carrier Label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="status_bar_carrier_color">Carrier label color</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Keyguard carrier</string>
    <string name="show_carrier_statusbar">Status bar carrier</string>
    <string name="show_carrier_enabled">Enabled</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar style</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion!</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_scrollingcache_force_enable">Force enable</string>
    <string name="pref_scrollingcache_default_enable">Default enable</string>
    <string name="pref_scrollingcache_default_disable">Default disable</string>
    <string name="pref_scrollingcache_force_disable">Force disable</string>
    <string name="show_headset_icon_title">Headset icon</string>
    <string name="show_headset_icon_summary">Shows icon when headsets are connected.</string>
    <string name="gesture_anywhere_title">Gesture Anywhere</string>
    <string name="gesture_anywhere_enabled_title">Gesture Anywhere</string>
    <string name="gesture_anywhere_enabled_summary">Enable the Gesture Anywhere feature</string>
    <string name="gesture_anywhere_position_title">Location</string>
    <string name="gesture_anywhere_position_left">Left edge</string>
    <string name="gesture_anywhere_position_right">Right edge</string>
    <string name="gesture_anywhere_gestures_title">Gestures</string>
    <string name="gesture_anywhere_gestures_summary">Add, remove, and edit gestures</string>
    <string name="ga_button_add">Add gesture</string>
    <string name="ga_button_reload">Reload</string>
    <string name="ga_button_discard">Discard</string>
    <string name="ga_button_done">Done</string>
    <string name="ga_prompt_gesture_name">Name</string>
    <string name="ga_error_missing_name">You must enter a name</string>
    <string name="ga_save_success">Gesture saved in %s</string>
    <string name="ga_rename_action">OK</string>
    <string name="ga_cancel_action">Cancel</string>
    <string name="ga_gestures_loading">Loading gestures...</string>
    <string name="ga_gestures_empty">No gestures</string>
    <string name="ga_gestures_activity">Gestures</string>
    <string name="ga_gestures_edit">Edit</string>
    <string name="ga_gestures_delete">Delete</string>
    <string name="ga_gestures_delete_success">Gesture deleted</string>
    <string name="ga_gestures_rename_title">Rename gesture</string>
    <string name="ga_gestures_rename_label">Gesture name</string>
    <string name="ga_gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    <string name="trigger_category">Trigger region</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="status_bar_temperature_title">Statusbar weather temperature</string>
    <string name="status_bar_temperature_hidden">Hidden</string>
    <string name="status_bar_temperature_show_scale">Shown with scale</string>
     <string name="stats_title">Stats</string>
</resources>